src/test/testData/src/main/resources/META-INF/doma/example/dao/inspection/TestDataCheckDao/invalidExpandDirective.sql
SELECT <error descr="Asterisk is required after expand variable">/*%expand*/</error>0 FROM employee
 WHERE rank < /* emplotee.rank */0
